# ai-team-sync

./: .ai-team-sync.toml  .ai-team-sync.toml.example  .env.example  .gitignore  .mcp.json  AGENTS.md  AGENT_COORDINATION.md  AGENT_INTEGRATION_GAPS.md  CHANGELOG.md  MCP_SETUP.md  MCP_TOOL_GAPS.md  README.md  mcp-config.json  pyproject.toml  setup.sh
.github/workflows/: pr-enrichment.yml
docs/: product-gaps-reaper-and-scope.md
examples/: claude-code-integration.md  conflict-scenarios.md  team-config.toml
scripts/: install-hooks.sh
src/ai_team_sync/: __init__.py  approval_policy.py  background_tasks.py  cli.py  config.py  database.py  events.py  git_utils.py  models.py  presence.py  schemas.py  server.py  session_pointer.py
src/ai_team_sync/hooks/: override_inbox.py  post_checkout.py  post_commit.py  post_tool_use_presence.py  pre_commit.py  pre_tool_use_lockcheck.py  prepare_commit_msg.py  session_autostart.py  session_heartbeat.py
src/ai_team_sync/mcp/: __init__.py  server.py  vision_qa.py
src/ai_team_sync/notifications/: dispatcher.py  slack.py  telegram.py
src/ai_team_sync/routers/: dashboard.py  decisions.py  git_status.py  locks.py  override_requests.py  presence_http.py  presence_ws.py  sessions.py  websocket.py
tests/: conftest.py  test_background_tasks.py  test_decision_list.py  test_detect_agent.py  test_locks.py  test_mcp_extend_scope.py  test_mcp_pre_commit_check.py  test_notifications.py  test_override_inbox.py  test_presence_http.py  test_presence_intent.py  test_server_agent.py  test_session_autostart.py  test_sessions.py
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
