[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-team-sync"
version = "0.2.0"
description = "Change management toolkit for teams working with AI coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Patrick Vestal", email = "patrick.vestal@gmail.com"},
]
keywords = ["ai", "change-management", "team", "agents", "claude", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "click>=8.1.0",
    "httpx>=0.26.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "mcp>=1.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29.0"]  # kept for back-compat; asyncpg is now a core dep
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
]

[project.scripts]
ats = "ai_team_sync.cli:cli"
ats-server = "ai_team_sync.server:main"
ats-mcp = "ai_team_sync.mcp.server:main"
vision-qa-mcp = "ai_team_sync.mcp.vision_qa:main"

[project.urls]
Homepage = "https://github.com/patrickv77/ai-team-sync"
Repository = "https://github.com/patrickv77/ai-team-sync"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
